# multilingual-bpe-tokenizer

./: .gitignore  README.md  evaluate_tokenizer.py  tokenizer.json
.cursor/rules/: specify-rules.mdc
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
SanskritBPETokenizer-main/: README.md  app.py  requirements.txt
SanskritBPETokenizer-main/data/vocab/: merges_saved.pkl
SanskritBPETokenizer-main/src/: __init__.py  tokenizer.py  utils.py
specs/001-multilingual-bpe-tokenizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multilingual-bpe-tokenizer/checklists/: requirements.md
tokenizer/: .gitignore  MultilingualBPE.ipynb  pyproject.toml  requirements.txt
tokenizer/data/clean/: en.txt  hi.txt  sa.txt  te.txt
tokenizer/output/: merges.txt  tokenizer.json  tokenizer_combined.json  vocab.json  vocab.json.backup
tokenizer/src/: akshara_splitter.py  bpe.py  fetch.py  normalize.py  regex_pretokenizer.py  score.py  tokenizer.py  train.py
tokenizer/tests/: README.md  TEST_COVERAGE_REPORT.md  __init__.py  run_all_tests.py  test_bpe.py  test_bpe_extended.py  test_regex_pretokenizer.py  test_regex_pretokenizer_extended.py  test_score.py  test_tokenizer.py  test_tokenizer_extended.py  test_train.py
widget/: index.html  tokenizer.js
widget/data/: tokenizer.json  tokenizer_huggingface.json
(+2 files in other folders)
